crates/executor/src/tests/sql/commands/snapshots/unpivot/query_unpivot_select_specific_columns.snap
---
source: crates/executor/src/tests/sql/commands/unpivot.rs
description: "\"SELECT dept, month, sales\n  FROM monthly_sales\n    UNPIVOT (sales FOR month IN (jan, feb, mar, apr))\n  ORDER BY dept;\""
info: "Setup queries: CREATE OR REPLACE TABLE monthly_sales(\n  empid INT,\n  dept TEXT,\n  jan INT,\n  feb INT,\n  mar INT,\n  apr INT); INSERT INTO monthly_sales VALUES\n  (1, 'electronics', 100, 200, 300, 100),\n  (2, 'clothes', 100, 300, 150, 200),\n  (3, 'cars', 200, 400, 100, 50),\n  (4, 'appliances', 100, NULL, 100, 50);"
---
Ok(
    [
        "+-------------+-------+-------+",
        "| dept        | month | sales |",
        "+-------------+-------+-------+",
        "| appliances  | JAN   | 100   |",
        "| appliances  | MAR   | 100   |",
        "| appliances  | APR   | 50    |",
        "| cars        | JAN   | 200   |",
        "| cars        | FEB   | 400   |",
        "| cars        | MAR   | 100   |",
        "| cars        | APR   | 50    |",
        "| clothes     | JAN   | 100   |",
        "| clothes     | FEB   | 300   |",
        "| clothes     | MAR   | 150   |",
        "| clothes     | APR   | 200   |",
        "| electronics | JAN   | 100   |",
        "| electronics | FEB   | 200   |",
        "| electronics | MAR   | 300   |",
        "| electronics | APR   | 100   |",
        "+-------------+-------+-------+",
    ],
)
