crates/executor/src/tests/sql/commands/snapshots/unpivot/query_unpivot_with_aggregation.snap
---
source: crates/executor/src/tests/sql/commands/unpivot.rs
description: "\"SELECT month, SUM(sales) as total_sales\n  FROM monthly_sales\n    UNPIVOT (sales FOR month IN (jan, feb, mar, apr))\n  GROUP BY month\n  ORDER BY month;\""
info: "Setup queries: CREATE OR REPLACE TABLE monthly_sales(\n  empid INT,\n  dept TEXT,\n  jan INT,\n  feb INT,\n  mar INT,\n  apr INT); INSERT INTO monthly_sales VALUES\n  (1, 'electronics', 100, 200, 300, 100),\n  (2, 'clothes', 100, 300, 150, 200),\n  (3, 'cars', 200, 400, 100, 50),\n  (4, 'appliances', 100, NULL, 100, 50);"
---
Ok(
    [
        "+-------+-------------+",
        "| month | total_sales |",
        "+-------+-------------+",
        "| APR   | 400         |",
        "| FEB   | 900         |",
        "| JAN   | 500         |",
        "| MAR   | 650         |",
        "+-------+-------------+",
    ],
)
